# momentum

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  PROMPT.md  README.md  SOUL.md  env.example  pip.conf  pyproject.toml
data/: etf_momentum.sqlite3
docs/: EVALUATION.md  GBM_AB_SIGNIFICANCE_PROGRESS.md  UPGRADE_IDEAS.md  WECHAT_MINIPROGRAM_PROJECT.md  crude_oil_rotation_report.md  futures-continuous-rules.md  futures-continuous-spec.md  range_trading_strategy.md  refactor-bt-trend-trend-dedup.md  rotation_research_guide.md  strategy_roadmap.md  trend_backtest_implementation_playbook.md  universal_rotation_framework.md
miniprogram/: README.md  app.js  app.json  app.wxss  project.config.json  project.private.config.json
qlib_workflow/: README.md  automl_compare.py  automl_pipeline.py  config.toml  dump_qlib_bin.py  export_qlib_csv.py  ml_pipeline.py  workflow.py
scripts/: bond_yield_tool.py  calendar_timing_param_search.py  calendar_timing_risk_budget_param_search.py  calendar_timing_robust_research.py  check_akshare_alt_sources_etf_coverage.py  check_trend_backtest_readiness.py  fredapi.key  local_mysql.ps1  local_mysql.sh  migrate_sqlite_to_mysql.py  rotation_long_horizon_param_search.py  rotation_risk_budget_anchor_param_search.py  run_all_futures_replay.py  start_dev.ps1  start_dev.sh  trend_atr_stop_static_param_search.py  trend_er_entry_param_search.py  trend_momentum_base_param_search.py  trend_momentum_walkforward_5y_fast.py  trend_momentum_walkforward_5y_test.py  trend_r_profit_scaleout_param_search.py  trend_risk_budget_param_search.py  update_macro.py  update_macro_step1.py
skills/: .skills_store_lock.json  SKILL_VETTING_REPORT.md
tests/: conftest.py  test_adjust_range_validation_coverage.py  test_adjust_validation.py  test_akshare_fetcher.py  test_akshare_fetcher_edgecases.py  test_analysis_account_lot.py  test_analysis_baseline.py  test_analysis_baseline_edgecases.py  test_analysis_calendar_effect_rotation.py  test_analysis_calendar_timing_strategy.py  (+104 more)
(+243 files in other folders)
