[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etf-momentum"
version = "0.1.0"
description = "ETF momentum rotation research toolkit (pool config, data ingest, API/UI)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.23.0",
  "sqlalchemy>=2.0.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.3.0",
  "akshare>=1.13.0",
  "pandas>=2.2.0",
  "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=4.1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]

