[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etf-momentum"
version = "0.1.0"
description = "ETF momentum rotation research toolkit (pool config, data ingest, API/UI)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.23.0",
  "sqlalchemy>=2.0.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.3.0",
  "akshare==1.16.72",
  "pandas>=2.2.0",
  "scipy>=1.16.3",
  "httpx>=0.25.0",
  # Ensure calendar covers current+future sessions (e.g. 2026+).
  "exchange-calendars>=4.12",
  # MySQL 8 support (cloud hosting): SQLAlchemy dialect driver
  "pymysql>=1.1.0",
  "pyqlib>=0.9.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=4.1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
etf_momentum = ["web/*.html"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
markers = [
  "integration: tests that hit real external services (opt-in)",
]

